# Clipper2

./: .gitignore
CPP/: .gitignore  CMakeLists.txt
CPP/BenchMark/: CMakeLists.txt  CoedgeBenchmark.cpp  StripDuplicateBenchmark.cpp  boostRbTree.cpp  boostRbTreeAlgorithm.cpp  sortRbTree.cpp
CPP/Clipper2Lib/include/clipper2/: clipper.core.h  clipper.engine.h
CPP/Clipper2Lib/src/: clipper.engine.cpp
CPP/Tests/: Polygons_13.txt  Polygons_14.txt  TestAssociation.cpp  TestClipperLearning.cpp  TestCoedge2107.cpp  TestOverlapCase.cpp  TestPolygons.cpp
CPP/Utils/: PionFileLoad.h  PionFileSave.h
CPP/Utils/ChaoUtil/: CMakeLists.txt
CPP/Utils/ChaoUtil/include/: ChaoFileLoad.h  ChaoFileSave.h
